--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1327,6 +1327,22 @@
   number = {5}
 }
 
+@article{demmig-adamsSurveyThermalEnergy1998,
+  title = {Survey of {{Thermal Energy Dissipation}} and {{Pigment Composition}} in {{Sun}} and {{Shade Leaves}}},
+  author = {Demmig-Adams, Barbara},
+  date = {1998-05-01},
+  journaltitle = {Plant and Cell Physiology},
+  volume = {39},
+  pages = {474--482},
+  issn = {0032-0781},
+  doi = {10.1093/oxfordjournals.pcp.a029394},
+  url = {https://doi.org/10.1093/oxfordjournals.pcp.a029394},
+  urldate = {2021-05-03},
+  abstract = {A survey was conducted of the magnitude of energy dissipation in photosystem II (expressed as nonphotochemi-cal quenching of chlorophyll fluorescence, NPQ) as well as leaf carotenoid composition of a wide range of different plant species growing in deep shade and/or full sun. Consistently higher levels of the reversible component of NPQ as well as higher degrees of rapidly attainable de-epoxida-tion of the xanthophyll cycle (VAZ) pool were observed in sun leaves compared to deep shade leaves. It is concluded that these altered features of the xanthophyll cycle allowed sun leaves to dissipate excess energy more effectively over the short term. In addition to the rapid increase in reversible NPQ, shade leaves exhibited a slow further, and sustained, increase in NPQ. In contrast to these deep shade leaves experimentally exposed to high PFDs, understory leaves experiencing highly variable PFD in their natural environment appeared to be able to dissipate excess excitation energy adequately via xanthophyll cycle-dependent thermal dissipation. Furthermore, very consistent trends across plant species were observed for changes in carotenoid composition (pools of carotenes, VAZ, and other xantho-phylls) in response to light environment, as long as it is assumed that in some species rβ-carotene can be replaced by α-carotene and in a few plant species lutein can be replaced by lactucaxanthin. Sun leaves consistently exhibited much greater levels of VAZ than shade leaves but very similar levels of lutein and neoxanthin (all on a Chi basis) as well as an only slightly higher ratio of total carotenes to the pool of all xanthophylls.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\59F89VNI\\Demmig-Adams - 1998 - Survey of Thermal Energy Dissipation and Pigment C.pdf;C\:\\Users\\Me\\Zotero\\storage\\G33I4WLW\\1850683.html},
+  number = {5}
+}
+
 @article{derroireContrastingPatternsLeaf2018,
   title = {Contrasting Patterns of Leaf Trait Variation among and within Species during Tropical Dry Forest Succession in {{Costa Rica}}},
   author = {Derroire, Géraldine and Powers, Jennifer S. and Hulshof, Catherine M. and Cárdenas Varela, Luis E. and Healey, John R.},
@@ -2203,6 +2219,41 @@
   number = {1}
 }
 
+@article{hansenVariationPigmentComposition2002a,
+  title = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest: A Comparative Study on Deciduous Tree Species Differing in Shade Tolerance},
+  shorttitle = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest},
+  author = {Hansen, Ute and Fiedler, Brita and Rank, Barbara},
+  date = {2002-05},
+  journaltitle = {Trees},
+  volume = {16},
+  pages = {354--364},
+  issn = {09311890},
+  doi = {10.1007/s00468-002-0163-9},
+  url = {http://link.springer.com/10.1007/s00468-002-0163-9},
+  urldate = {2021-05-03},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NK6F77TP\\Hansen et al. - 2002 - Variation of pigment composition and antioxidative.pdf},
+  langid = {english},
+  number = {4}
+}
+
+@article{hansenVariationPigmentComposition2002b,
+  title = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest: A Comparative Study on Deciduous Tree Species Differing in Shade Tolerance},
+  shorttitle = {Variation of Pigment Composition and Antioxidative Systems along the Canopy Light Gradient in a Mixed Beech/Oak Forest},
+  author = {Hansen, Ute and Fiedler, Brita and Rank, Barbara},
+  date = {2002-05-01},
+  journaltitle = {Trees},
+  volume = {16},
+  pages = {354--364},
+  issn = {1432-2285},
+  doi = {10.1007/s00468-002-0163-9},
+  url = {https://doi.org/10.1007/s00468-002-0163-9},
+  urldate = {2021-05-03},
+  abstract = {The acclimation of leaf pigments and antioxidative systems along the vertical canopy light gradient was determined in mature European beech (Fagus sylvatica L.) and sessile oak [Quercus petraea (Matt.) Liebl.] trees in a mixed beech/oak forest in northwest Germany. The aim of the study was to investigate if the higher shade tolerance of beech, relative to oak, is correlated with characteristics of the leaf pigment composition and antioxidative systems. Both species showed a similar acclimative response to increasing light availability. Compared to shade leaves, leaves of the upper crown layer exhibited higher chlorophyll~a to chlorophyll~b ratios and higher contents of photoprotective carotenoids, ascorbate and glutathione per unit chlorophyll, and higher mean activities of ascorbate peroxidase, monodehydroascorbate reductase, dehydroascorbate reductase and glutathione reductase. The comparison of beech and oak leaves sampled at crown positions with similar light environments revealed "shade-type" pigment characteristics for beech, relative to oak, whereas "sun-type" characteristics were found with respect to antioxidative systems. At a given average light availability level, leaves of F. sylvatica exhibited higher antioxidant contents and higher ascorbate peroxidase activities as compared to those of Qu. petraea. The data suggest that a higher antioxidative capacity is required in leaves of the more shade-tolerant species. The supposed higher production rate of radicals and reactive oxygen species (ROS) in beech can be explained by: (1) the lower energy utilizing capacity, as beech leaves show lower light-saturated rates of photosynthesis than oak leaves, and (2) by specific features of the photosynthetic apparatus as suggested by the pigment data. A higher ROS generation rate in beech versus oak leaves could be seen as a consequence of efficient photosynthesis under low light conditions. Therefore a high capacity of protection against oxidative stress might be a prerequisite of shade tolerance.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ARBSH9NM\\Hansen et al. - 2002 - Variation of pigment composition and antioxidative.pdf},
+  langid = {english},
+  number = {4}
+}
+
 @article{hardwickRelationshipLeafArea2015,
   title = {The Relationship between Leaf Area Index and Microclimate in Tropical Forest and Oil Palm Plantation: {{Forest}} Disturbance Drives Changes in Microclimate},
   shorttitle = {The Relationship between Leaf Area Index and Microclimate in Tropical Forest and Oil Palm Plantation},
@@ -2450,6 +2501,39 @@
   abstract = {We compared differences in leaf properties, leaf gas exchange and photochemical properties between drought-deciduous and evergreen trees in tropical dry forests, where soil nutrients differed but rainfall was similar. Three canopy trees (Shorea siamensis Miq., Xylia xylocarpa (Roxb.) W. Theob. and Vitex peduncularis Wall. ex Schauer) in a drought-deciduous forest and a canopy tree (Hopea ferrea Lanessan) in an evergreen forest were selected. Soil nutrient availability is lower in the evergreen forest than in the deciduous forest. Compared with the evergreen tree, the deciduous trees had shorter leaf life spans, lower leaf masses per area, higher leaf mass-based nitrogen (N) contents, higher leaf mass-based photosynthetic rates (mass-based Pn), higher leaf N-based Pn, higher daily maximum stomatal conductance (gs) and wider conduits in wood xylem. Mass-based Pn decreased from the wet to the dry season for all species. Following onset of the dry season, daily maximum gs and sensitivity of gs to leaf-to-air vapor pressure deficit remained relatively unchanged in the deciduous trees, whereas both properties decreased in the evergreen tree during the dry season. Photochemical capacity and non-photochemical quenching (NPQ) of photosystem II (PSII) also remained relatively unchanged in the deciduous trees even after the onset of the dry season. In contrast, photochemical capacity decreased and NPQ increased in the evergreen tree during the dry season, indicating that the leaves coped with prolonged drought by down-regulating PSII. Thus, the drought-avoidant deciduous species were characterized by high N allocation for leaf carbon assimilation, high water use and photoinhibition avoidance, whereas the drought-tolerant evergreen was characterized by low N allocation for leaf carbon assimilation, conservative water use and photoinhibition tolerance.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\J4JT9BVL\\Ishida et al. - 2006 - Contrasting seasonal leaf habits of canopy trees b.pdf},
   number = {5}
+}
+
+@article{ishidaDiurnalChangesLeaf1999,
+  title = {Diurnal Changes in Leaf Gas Exchange and Chlorophyll Fluorescence in Tropical Tree Species with Contrasting Light Requirements},
+  author = {Ishida, Atsushi and Nakano, Takashi and Matsumoto, Yoosuke and Sakoda, Mutsumi and Ang, Lai Hoe},
+  date = {1999-06-01},
+  journaltitle = {Ecol Res},
+  volume = {14},
+  pages = {77--88},
+  issn = {1440-1703},
+  doi = {10.1046/j.1440-1703.1999.00291.x},
+  url = {https://doi.org/10.1046/j.1440-1703.1999.00291.x},
+  urldate = {2021-05-03},
+  abstract = {Interspecific ecophysiological differences in response to different light environments are important to consider in regeneration behavior and forest dynamics. The diurnal changes in leaf gas exchange and chlorophyll fluorescence of two dipterocarps, Shorea leprosula (a high light-requiring) and Neobalanocarpus heimii (a low light-requiring), and a pioneer tree species (Macaranga gigantea) growing in open and gap sites were examined. In the open site, the maximum net photosynthetic rate (Pn), photosystem II (PSII) quantum yield (δ; F/Fm′), and relative electron transport rate (r-ETR) through PSII at a given photosynthetic photon flux density (PPFD) was higher in S. leprosula and M. gigantea than in N. heimii, while non-photochemical quenching (NPQ) at a given PPFD was higher in N. heimii. The maximum values of net photosynthetic rate (Pn) in M. gigantea and S. leprosula was higher in the open site (8–11 μmol m−2 s−1) than in the gap site (5 μmol m−2 s−1), whereas that in N. heimii was lower in the open site (2 μmol m−2 s−1) than in the gap site (4 μmol m−2 s−1), indicating that N. heimii was less favorable to the open site. These data provide evidence to support the hypothesis that ecophysiological characteristics link with plant’s regeneration behavior and successional status. Although Pn and stomatal conductance decreased at midday in M. gigantea and S. leprosula in the open site, both r-ETR and leaf temperature remained unchanged. This indicates that stomatal closure rather than reduced photochemical capacity limited Pn in the daytime. Conversely, there was reduced r-ETR under high PPFD conditions in N. heimii in the open site, indicating reduced photochemical capacity. In the gap site, Pn increased in all leaves in the morning before exposure to direct sunlight, suggesting a relatively high use of diffuse light in the morning.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\RYBN2SXE\\Ishida et al. - 1999 - Diurnal changes in leaf gas exchange and chlorophy.pdf},
+  langid = {english},
+  number = {2}
+}
+
+@article{ishidaLimitationLeafCarbon1999,
+  title = {Limitation of Leaf Carbon Gain by Stomatal and Photochemical Processes in the Top Canopy of {{Macaranga}} Conifera, a Tropical Pioneer Tree},
+  author = {Ishida, Atsushi and Toma, Takeshi and {Marjenah}},
+  date = {1999-06-01},
+  journaltitle = {Tree Physiology},
+  volume = {19},
+  pages = {467--473},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/19.7.467},
+  url = {https://doi.org/10.1093/treephys/19.7.467},
+  urldate = {2021-05-03},
+  abstract = {Diurnal changes in gas exchange and chlorophyll fluorescence were measured in the top canopy leaves of the tropical rainforest tree species, Macaranga conifera (Zoll.) Muell. Arg. during a drought year. Maximum values of net photosynthetic rate (Pn, 10 μmol m−2 s−1) and stomatal conductance (gs, 0.2 mol m−2 s−1) were found in east-facing leaves in early morning. After 1000 h, both Pn and gs decreased. Minimum daytime values of Pn, gs, and photosystem II (PSII) quantum yield (ΔF/Fm′) were found in horizontally fixed leaves. At a given electron transport rate through PSII (ETR), Pn was higher in early morning than at midday, suggesting a high rate of photorespiration at midday. We tested the hypothesis that the effect of low leaf temperature (Tleaf) on Pn is significant in the early morning, whereas the effect of low gs on Pn predominates at midday. In the early morning, when Tleaf was increased from 32 to 38 °C by artificial heating, Pn at a given ETR decreased 29\%, suggesting that the low Tleaf was associated with a high Pn. When Tleaf at midday was decreased from 37 to 32 °C by artificial cooling, Pn increased 22\%, but Pn at a given ETR was higher in early morning than at midday, even at the same low Tleaf (32 °C). This suggests that the rate of photorespiration was higher at midday than in early morning because low gs at midday caused a reduction in leaf intercellular CO2 concentration. We conclude that low Pn at midday was the result of both a reduction in the photochemical process and an increase in stomatal limitation.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7KRKDYCK\\Ishida et al. - 1999 - Limitation of leaf carbon gain by stomatal and pho.pdf;C\:\\Users\\Me\\Zotero\\storage\\JTL2Y87R\\1615986.html},
+  number = {7}
 }
 
 @article{ishiiExploringRelationshipsCanopy2004a,
@@ -2948,6 +3032,23 @@
   abstract = {Abstract. Photosynthetic acclimation of deciduous broad-leaved tree species was studied along a vertical gradient within the canopy of a multi-species deciduou},
   langid = {english},
   number = {12-13}
+}
+
+@article{konigerXanthophyllCyclePigmentsPhotosynthetic1995,
+  title = {Xanthophyll-{{Cycle Pigments}} and {{Photosynthetic Capacity}} in {{Tropical Forest Species}}: {{A Comparative Field Study}} on {{Canopy}}, {{Gap}} and {{Understory Plants}}},
+  shorttitle = {Xanthophyll-{{Cycle Pigments}} and {{Photosynthetic Capacity}} in {{Tropical Forest Species}}},
+  author = {Königer, Martina and Harris, Gary C. and Virgo, Aurelio and Winter, Klaus},
+  date = {1995},
+  journaltitle = {Oecologia},
+  volume = {104},
+  pages = {280--290},
+  publisher = {{Springer}},
+  issn = {0029-8549},
+  abstract = {Xanthophyll-cycle pigments and photosynthetic capacity (\$\textbackslash text\{PS\}\_\{\textbackslash text\{max\}\}\$) were analyzed in 25 species from different light environments (canopy, gap, understory) within a Panamanian tropical forest. (1) Sun-exposed leaves of canopy tree species showed the highest photosynthetic capacities and largest xanthophyll-cycle pools (violaxanthin, antheraxanthin, zeaxanthin) of about 87 mmol mol-1 chlorophyll with only small amounts of α-carotene [about 7 mmol mol-1 chlorophyll = 8\% of total (α+β) carotene pool]. Under high natural photon flux densities (PFDs) canopy leaves rapidly converted up to 96\% of the xanthophyll-cycle pool into zeaxanthin. The back reaction to violaxanthin occurred much faster in low light than in complete darkness. At the end of the night, zeaxanthin still accounted for, on average, 14\% of the total xanthophyll-cycle pigments. (2) Leaves of gap plants had intermediate values of \$\textbackslash text\{PS\}\_\{\textbackslash text\{max\}\}\$ and a 43\% lower total carotenoid content than canopy leaves. The average size of the xanthophyll-cycle pool was 35 mmol mol-1 chlorophyll, and α-carotene accounted for up to 66\% of the total (α+β) carotene pool. Under high light conditions gap plants converted, on average, 86\% of the xanthophyll-cycle pigments into zeaxanthin. The back reaction, following a decrease in ambient PFD, was slower than the forward reaction. At the end of the night, zeaxanthin accounted for, on average, 7\% of the xanthophyll-cycle pigments in gap plants. (3) Understory plants showed the lowest values of \$\textbackslash text\{PS\}\_\{\textbackslash text\{max\}\}\$ and the smallest xanthophyll-cycle pool of about 22 mmol mol-1 chlorophyll. α-Carotene accounted for up to 70\% of total carotene. The conversion of xanthophyll-cycle pigments into zeaxanthin was negligible during short sunflecks of 1-2 min duration and PFDs up to about 400 μmol m-2s-1. At predawn, leaves of understory plants rarely contained any detectable zeaxanthin. Aechmea magdalenae, an understory CAM plant, showed exceptionally high rates of \$\textbackslash text\{PS\}\_\{\textbackslash text\{max\}\}\$ per unit leaf area compared to sympatric C₃ understory species.},
+  eprint = {4221108},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PIZSJBR3\\Königer et al. - 1995 - Xanthophyll-Cycle Pigments and Photosynthetic Capa.pdf},
+  number = {3}
 }
 
 @article{konradLeafTemperatureIts,
@@ -3450,6 +3551,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\LHJVBFWA\\Lewis et al. - 2000 - Vertical gradients in photosynthetic light respons.pdf},
   langid = {english},
   number = {7}
+}
+
+@article{liakouraTrichomeDensityIts1997,
+  title = {Trichome Density and Its {{UV}}-{{B}} Protective Potential Are Affected by Shading and Leaf Position on the Canopy},
+  author = {Liakoura, V. and Stefanou, M. and Manetas, Y. and Cholevas, C. and Karabourniotis, G.},
+  date = {1997-12},
+  journaltitle = {Environmental and Experimental Botany},
+  volume = {38},
+  pages = {223--229},
+  issn = {00988472},
+  doi = {10.1016/S0098-8472(97)00005-1},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0098847297000051},
+  urldate = {2021-05-03},
+  abstract = {In Olea europaea trichome density and UV-B absorbing compounds of leaf hairs and the lamina proper of leaves located in south-facing, north-facing and the internal of the canopy were positively correlated to the UV-B midday instant irradiance measured in September at these three different positions of the canopy. The correlation between these three parameters and the receiving photosynthetically active radiation (PAR), however, was weaker. In Quercus ilex, trichome density and its UV-B absorbing capacity were considerably higher in the exposed, south-facing leaves, compared to the deeply shaded ones; the UV-B absorbing capacity of the de-haired lamina, however, was the same. In the broadleaved, alpine rosette of Verbascum speciosum, one could distinguish two areas on the leaves, one exposed and one shaded by the superimposed lamina. Although trichome density and the UV-B absorbing compounds of the de-haired leaf were the same in the two areas, the UV-B absorbing capacity of hairs was considerably increased in the exposed region. In V. speciosum, exposure induced also qualitative changes in the UV-B absorbance profile, apparently due to the formation of new flavonoid compounds absorbing maximally at 345-350 nm. In all other cases, the differences were mainly quantitative. The results support the postulate of a function of leaf hairs as a UV-B radiation screen and suggest that trichome density and/or its UV-B absorbing capacity may depend on irradiance during leaf development. © 1997 Elsevier Science B.V.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9LS22G9W\\Liakoura et al. - 1997 - Trichome density and its UV-B protective potential.pdf},
+  langid = {english},
+  number = {3}
 }
 
 @article{liangForestTypeHeight2019,
@@ -4088,6 +4206,24 @@
   doi = {10.1007/s11099-018-0767-y},
   abstract = {Photosynthesis is amongst the plant cell functions that are highly sensitive to any type of changes. Sun and shade conditions are prevalent in fields as well as dense forests. Dense forests face extreme sun and shade conditions, and plants adapt themselves accordingly. Sun flecks cause changes in plant metabolic processes. In the field, plants have to face high light intensity and survive under such conditions. Sun and shade type of plants develops a respective type of chloroplasts which help plants to survive and perform photosynthesis under adverse conditions. PSII and Rubisco behave differently under different sun and shade conditions. In this review, morphological, physiological, and biochemical changes under conditions of sun (high light) and shade (low light) on the process of photosynthesis, as well as the tolerance and adaptive mechanisms involved for the same, were summarized.},
   file = {C\:\\Users\\Me\\Zotero\\storage\\ZF7MC5ME\\Mathur et al. - 2018 - Photosynthetic efficiency in sun and shade plants.pdf}
+}
+
+@article{matsubaraSunshadePatternsLeaf2009,
+  title = {Sun-Shade Patterns of Leaf Carotenoid Composition in 86 Species of Neotropical Forest Plants},
+  author = {Matsubara, Shizue and Krause, G. Heinrich and Aranda, Jorge and Virgo, Aurelio and Beisel, Kim G. and Jahns, Peter and Winter, Klaus and Matsubara, Shizue and Krause, G. Heinrich and Aranda, Jorge and Virgo, Aurelio and Beisel, Kim G. and Jahns, Peter and Winter, Klaus},
+  date = {2009-01-07},
+  journaltitle = {Functional Plant Biol.},
+  volume = {36},
+  pages = {20--36},
+  publisher = {{CSIRO PUBLISHING}},
+  issn = {1445-4416, 1445-4416},
+  doi = {10.1071/FP08214},
+  url = {http://www.publish.csiro.au/fp/FP08214},
+  urldate = {2021-05-03},
+  abstract = {A survey of photosynthetic pigments, including 86 species from 64 families, was conducted for leaves of neotropical vascular plants to study sun-shade patterns in carotenoid biosynthesis and occurrence of α-carotene (α-Car) and lutein epoxide (Lx). Under low light, leaves invested less in structural components and more in light harvesting, as manifested by low leaf dry mass per area (LMA) and enhanced mass-based accumulation of chlorophyll (Chl) and carotenoids, especially lutein and neoxanthin. Under high irradiance, LMA was greater and β-carotene (β-Car) and violaxanthin-cycle pool increased on a leaf area or Chl basis. The majority of plants contained α-Car in leaves, but the α- to β-Car ratio was always low in the sun, suggesting preference for β-Car in strong light. Shade and sun leaves had similar β,ε-carotenoid contents per unit Chl, whereas sun leaves had more β,β-carotenoids than shade leaves. Accumulation of Lx in leaves was found to be widely distributed among taxa: {$>$}5 mmol mol Chl−1 in 20\% of all species examined and {$>$}10 mmol mol Chl−1 in 10\% of woody species. In Virola elongata (Benth.) Warb, having substantial Lx in both leaf types, the Lx cycle was operating on a daily basis although Lx restoration in the dark was delayed compared with violaxanthin restoration.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\Z8L8245H\\Matsubara et al. - 2009 - Sun-shade patterns of leaf carotenoid composition .pdf;C\:\\Users\\Me\\Zotero\\storage\\YSZ5GWCI\\fp08214.html},
+  langid = {english},
+  number = {1}
 }
 
 @article{mau_temperate_2018,
@@ -7427,6 +7563,23 @@
   number = {6}
 }
 
+@article{TrichomeDensityIts1997,
+  title = {Trichome Density and Its {{UV}}-{{B}} Protective Potential Are Affected by Shading and Leaf Position on the Canopy},
+  date = {1997-12-01},
+  journaltitle = {Environmental and Experimental Botany},
+  volume = {38},
+  pages = {223--229},
+  publisher = {{Elsevier}},
+  issn = {0098-8472},
+  doi = {10.1016/S0098-8472(97)00005-1},
+  url = {http://www.sciencedirect.com/science/article/pii/S0098847297000051},
+  urldate = {2021-05-03},
+  abstract = {In Olea europaea trichome density and UV-B absorbing compounds of leaf hairs and the lamina proper of leaves located in south-facing, north-facing and…},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\T9QKHIAF\\S0098847297000051.html},
+  langid = {english},
+  number = {3}
+}
+
 @article{turnbullRespirationCharacteristicsTemperate2005,
   title = {Respiration Characteristics in Temperate Rainforest Tree Species Differ along a Long-Term Soil-Development Chronosequence},
   author = {Turnbull, Matthew H. and Tissue, David T. and Griffin, Kevin L. and Richardson, Sarah J. and Peltzer, Duane A. and Whitehead, David},
@@ -7960,6 +8113,7 @@
 }
 
 @article{woodsStructureMoreImportant2018,
+  ids = {woodsStructureMoreImportant2018b},
   title = {Structure Is More Important than Physiology for Estimating Intracanopy Distributions of Leaf Temperatures},
   author = {Woods, H. Arthur and Saudreau, Marc and Pincebourde, Sylvain},
   date = {2018-04-27},
@@ -7973,45 +8127,7 @@
   abstract = {Estimating leaf temperature distributions (LTDs) in canopies is crucial in forest ecology. Leaf temperature affects the exchange of heat, water, and gases, and it alters the performance of leaf‐dwelling species such as arthropods, including pests and invaders. LTDs provide spatial variation that may allow arthropods to thermoregulate in the face of long‐term changes in mean temperature or incidence of extreme temperatures. Yet, recording LTDs for entire canopies remains challenging. Here, we use an energy‐exchange model (RATP) to examine the relative roles of climatic, structural, and physiological factors in influencing three‐dimensional LTDs in tree canopies. A Morris sensitivity analysis of 13 parameters showed, not surprisingly, that climatic factors had the greatest overall effect on LTDs. In addition, however, structural parameters had greater effects on LTDs than did leaf physiological parameters. Our results suggest that it is possible to infer forest canopy LTDs from the LTDs measured or simulated just at the surface of the canopy cover over a reasonable range of parameter values. This conclusion suggests that remote sensing data can be used to estimate 3D patterns of temperature variation from 2D images of vegetation surface temperatures. Synthesis and applications. Estimating the effects of LTDs on natural plant–insect communities will require extending canopy models beyond their current focus on individual species or crops. These models, however, contain many parameters, and applying the models to new species or to mixed natural canopies depends on identifying the parameters that matter most. Our results suggest that canopy structural parameters are more important determinants of LTDs than are the physiological parameters that tend to receive the most empirical attention.},
   eprint = {29876095},
   eprinttype = {pmid},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\DZPQAY3V\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf},
-  number = {10},
-  pmcid = {PMC5980536}
-}
-
-@article{woodsStructureMoreImportant2018a,
-  title = {Structure Is More Important than Physiology for Estimating Intracanopy Distributions of Leaf Temperatures},
-  author = {Woods, H. Arthur and Saudreau, Marc and Pincebourde, Sylvain},
-  date = {2018-04-27},
-  journaltitle = {Ecol Evol},
-  volume = {8},
-  pages = {5206--5218},
-  issn = {2045-7758},
-  doi = {10.1002/ece3.4046},
-  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5980536/},
-  urldate = {2020-12-16},
-  abstract = {Estimating leaf temperature distributions (LTDs) in canopies is crucial in forest ecology. Leaf temperature affects the exchange of heat, water, and gases, and it alters the performance of leaf‐dwelling species such as arthropods, including pests and invaders. LTDs provide spatial variation that may allow arthropods to thermoregulate in the face of long‐term changes in mean temperature or incidence of extreme temperatures. Yet, recording LTDs for entire canopies remains challenging. Here, we use an energy‐exchange model (RATP) to examine the relative roles of climatic, structural, and physiological factors in influencing three‐dimensional LTDs in tree canopies. A Morris sensitivity analysis of 13 parameters showed, not surprisingly, that climatic factors had the greatest overall effect on LTDs. In addition, however, structural parameters had greater effects on LTDs than did leaf physiological parameters. Our results suggest that it is possible to infer forest canopy LTDs from the LTDs measured or simulated just at the surface of the canopy cover over a reasonable range of parameter values. This conclusion suggests that remote sensing data can be used to estimate 3D patterns of temperature variation from 2D images of vegetation surface temperatures. Synthesis and applications. Estimating the effects of LTDs on natural plant–insect communities will require extending canopy models beyond their current focus on individual species or crops. These models, however, contain many parameters, and applying the models to new species or to mixed natural canopies depends on identifying the parameters that matter most. Our results suggest that canopy structural parameters are more important determinants of LTDs than are the physiological parameters that tend to receive the most empirical attention.},
-  eprint = {29876095},
-  eprinttype = {pmid},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\WUCIU6LF\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf},
-  number = {10},
-  pmcid = {PMC5980536}
-}
-
-@article{woodsStructureMoreImportant2018b,
-  title = {Structure Is More Important than Physiology for Estimating Intracanopy Distributions of Leaf Temperatures},
-  author = {Woods, H. Arthur and Saudreau, Marc and Pincebourde, Sylvain},
-  date = {2018-04-27},
-  journaltitle = {Ecol Evol},
-  volume = {8},
-  pages = {5206--5218},
-  issn = {2045-7758},
-  doi = {10.1002/ece3.4046},
-  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5980536/},
-  urldate = {2020-12-16},
-  abstract = {Estimating leaf temperature distributions (LTDs) in canopies is crucial in forest ecology. Leaf temperature affects the exchange of heat, water, and gases, and it alters the performance of leaf‐dwelling species such as arthropods, including pests and invaders. LTDs provide spatial variation that may allow arthropods to thermoregulate in the face of long‐term changes in mean temperature or incidence of extreme temperatures. Yet, recording LTDs for entire canopies remains challenging. Here, we use an energy‐exchange model (RATP) to examine the relative roles of climatic, structural, and physiological factors in influencing three‐dimensional LTDs in tree canopies. A Morris sensitivity analysis of 13 parameters showed, not surprisingly, that climatic factors had the greatest overall effect on LTDs. In addition, however, structural parameters had greater effects on LTDs than did leaf physiological parameters. Our results suggest that it is possible to infer forest canopy LTDs from the LTDs measured or simulated just at the surface of the canopy cover over a reasonable range of parameter values. This conclusion suggests that remote sensing data can be used to estimate 3D patterns of temperature variation from 2D images of vegetation surface temperatures. Synthesis and applications. Estimating the effects of LTDs on natural plant–insect communities will require extending canopy models beyond their current focus on individual species or crops. These models, however, contain many parameters, and applying the models to new species or to mixed natural canopies depends on identifying the parameters that matter most. Our results suggest that canopy structural parameters are more important determinants of LTDs than are the physiological parameters that tend to receive the most empirical attention.},
-  eprint = {29876095},
-  eprinttype = {pmid},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\I5IBUEND\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\DZPQAY3V\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf;C\:\\Users\\Me\\Zotero\\storage\\I5IBUEND\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf},
   number = {10},
   pmcid = {PMC5980536}
 }
