--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -70,7 +70,7 @@
   number = {10}
 }
 
-@online{AmericanJournalBotany,
+@online{AmericanJournalBotanya,
   title = {American {{Journal}} of {{Botany}}},
   url = {https://bsapubs.onlinelibrary.wiley.com/doi/abs/10.1002/j.1537-2197.1990.tb13566.x},
   urldate = {2020-08-01},
